[gd_scene load_steps=3 format=3 uid="uid://dwyi1yn0r7r5j"]

[ext_resource type="Script" path="res://Scripts/level_select_screen.gd" id="1_efhwu"]
[ext_resource type="Texture2D" uid="uid://blli8e7ujlycp" path="res://PNGs/MapOfJapan.png" id="1_uc1g0"]

[node name="Control" type="Control" node_paths=PackedStringArray("levelDescription", "current_selection_label")]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 1.001
offset_left = -1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = 0.199951
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_efhwu")
title_scene = "res://Scenes/TitleScreen.tscn"
levelDescription = NodePath("HBoxContainer/VBoxContainer/LevelDescription")
current_selection_label = NodePath("HBoxContainer/VBoxContainer/CurrentSelection")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -638.0
offset_top = -400.0
offset_right = 642.0
offset_bottom = 397.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="LevelSelect" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Level Select"
horizontal_alignment = 1

[node name="LevelDescription" type="RichTextLabel" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
bbcode_enabled = true
text = "[center] Select a Level to Begin!"

[node name="CurrentSelection" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="GoToLevel" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Lets Go!"

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("1_uc1g0")
expand_mode = 1
stretch_mode = 4

[node name="TutorialButton" type="Button" parent="HBoxContainer/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -247.0
offset_top = 95.5
offset_right = -175.0
offset_bottom = 127.5
grow_horizontal = 2
grow_vertical = 2
text = "Tutorial"

[node name="SandboxButton" type="Button" parent="HBoxContainer/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 115.0
offset_top = -330.5
offset_right = 187.0
offset_bottom = -298.5
grow_horizontal = 2
grow_vertical = 2
text = "Sandbox"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="ExitToTitleScreen" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -168.0
offset_bottom = 32.0
grow_horizontal = 0
text = "Exit to Title Screen"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/GoToLevel" to="." method="_on_go_to_level_pressed"]
[connection signal="pressed" from="HBoxContainer/TextureRect/TutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="HBoxContainer/TextureRect/SandboxButton" to="." method="_on_sandbox_button_pressed"]
[connection signal="pressed" from="ExitToTitleScreen" to="." method="_on_exit_to_title_screen_pressed"]
